client/src/components/instruction.css
.instruction-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    width: 100%;
    height: calc(50% - 50px * 0.5);
    overflow: hidden;
}
.instruction-wrapper img {
    width: 100%;
    max-width: 100px;
    margin: 10px 0 20px 0;
}
.instruction-highlight {
    font-weight: 700;
    cursor: help;
    position: relative;
}
.instruction-highlight-info-active {
    opacity: 1;
    transition: 0.5s;
    transition-delay: 0.5s;
}
.instruction-highlight-info-inactive {
    opacity: 0;
    transition: 0.5s;
}
.instruction-highlight-info-active, .instruction-highlight-info-inactive {
    position: absolute;
    bottom: calc(100% + 50px);
    right: 0;
    width: 500px;
    font-weight: 500;
    color: black;
    cursor: auto;
    background-color: white;
    padding: 25px;
    border-radius: 25px;
}
.instruction-highlight-info-active-pointer-1, .instruction-highlight-info-active-pointer-2, .instruction-highlight-info-active-pointer-3 {
    opacity: 1;
    content: '';
    background-color: white;
    position: absolute;
}
.instruction-highlight-info-inactive-pointer-1, .instruction-highlight-info-inactive-pointer-2, .instruction-highlight-info-inactive-pointer-3 {
    opacity: 0;
    transition: 0s;
    width: 0;
    height: 0;
    position: absolute;
}
.instruction-highlight-info-active-pointer-1 {
    bottom: calc(100% + 5px);
    right: 60px;
    width: 10px;
    height: 10px;
    border-radius: 5px;
    transition: 0.1s;
}
.instruction-highlight-info-active-pointer-2 {
    bottom: calc(100% + 15px);
    right: 40px;
    width: 14px;
    height: 14px;
    border-radius: 7px;
    transition: 0.1s;
    transition-delay: 0.1s;
}
.instruction-highlight-info-active-pointer-3 {
    bottom: calc(100% + 25px);
    right: 60px;
    width: 20px;
    height: 20px;
    border-radius: 10px;
    transition: 0.1s;
    transition-delay: 0.3s;
}
@media only screen and (max-width: 800px) {
    .instruction-wrapper {
        font-size: 8px;
    }
    .instruction-highlight-info-active, .instruction-highlight-info-inactive {
        width: 200px;
    }
    .instruction-wrapper img {
        width: 100%;
        max-width: 20px;
        margin: 5px 0 10px 0;
    }
    .instruction-highlight-info-active-pointer-1 {
        bottom: calc(100% + 2px);
        right: 30px;
        width: 2px;
        height: 2px;
        border-radius: 1px;
    }
    .instruction-highlight-info-active-pointer-2 {
        bottom: calc(100% + 4px);
        right: 25px;
        width: 4px;
        height: 4px;
        border-radius: 2px;
    }
    .instruction-highlight-info-active-pointer-3 {
        bottom: calc(100% + 8px);
        right: 30px;
        width: 6px;
        height: 6px;
        border-radius: 3px;
    }
    .instruction-highlight-info-active, .instruction-highlight-info-inactive {
        width: 300px;
        font-weight: 500;
        padding: 2px;
        border-radius: 5px;
        position: fixed;
        bottom: 65px;
        left: calc(50% - 150px);
    }
}

